# Classic_Rag_Datasense

./: .gitignore  README.md  main.py  pyproject.toml  rag_metadata.db
Docs/: Architechure.md
docs/: ARCHITECTURE.md
src/Rag_pipeline/: config.py  pipeline.py
src/Rag_pipeline/Embedding/: __init__.py  openai_embedding.py
src/Rag_pipeline/Generation/: generation.py  reranker.py
src/Rag_pipeline/ingestion/: Chunker.py  Document_loader.py
src/Rag_pipeline/retrieval/: retriever.py
src/Rag_pipeline/vectordbstorage/: milvustore.py
