[project]
name = "rag-architect-assignment1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.2",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.21.0",
    "pymilvus>=2.6.9",
    "pypdf>=6.7.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
